# eligibility-app

./: README.md  eligibility_testing.ipynb  pyproject.toml  streamlit_app.py
src/: onederful.py
