[tool.poetry]
name = "eligibility-app"
version = "0.1.0"
description = ""
authors = ["Adam Weintraut <adamjweintraut@ischool.berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
httpx = "^0.27.2"
asyncio = "^3.4.3"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
nest-asyncio = "^1.6.0"
loguru = "^0.7.2"
streamlit-awesome-table = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
